syntax = "proto3";

package determined.api.v1;
option go_package = "github.com/determined-ai/determined/proto/pkg/apiv1";

import "determined/task/v1/task.proto";
import "determined/shared/v1/shared.proto";

// Get a set of tasks from the cluster
message GetTasksRequest {
    // Sorts tasks by the given field
    enum SortBy {
        // Returns tasks in an unsorted list.
        SORT_BY_UNSPECIFIED = 0;
        // Returns tasks sorted by id.
        SORT_BY_ID = 1;
        // Returns tasks sorted by time.
        SORT_BY_TIME = 2;
    }

    // Sort tasks by the given field
    SortBy sort_by = 2;
    // Order tasks in either ascending or descending order.
    determined.shared.v1.OrderBy order_by = 3;
}
// Response to GetTasksRequest.
message GetTasksResponse {
    // The list of returned tasks.
    repeated determined.task.v1.Task tasks = 1;
}

// Get the requested task.
message GetTaskRequest {
    // The id of the task.
    string task_id = 1;
}
// Response to GetTaskRequest.
message GetTaskResponse {
    // The requested task.
    determined.task.v1.Task task = 1;
}
